# personal-site

./: CLAUDE.md  CONTRIBUTING.md  PLAN.md  SPLASH.md
docs/: ARCHITECTURE.md  DROPS.md  PERSPECTIVE.md  SCENE.md  SIMULATION.md  SPLASH.md  TODO.md  TODO_NEW.md
droplet-engine/: Cargo.toml
droplet-engine/models/: segformer_b0_ade20k.onnx
droplet-engine/src/: background.rs  lib.rs  render.rs
droplet-engine/src/scene/: data.rs  mod.rs
droplet-engine/src/sim/: droplet.rs  mod.rs  splash.rs  stream.rs
droplet-engine/src/world/: flow.rs  mod.rs  terrain.rs
scripts/: build-wasm.sh
web/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/lib/: background.ts  terrain.ts
web/src/lib/components/: AsciiCanvas.svelte  RainCanvas.svelte
web/src/lib/scene/: data.ts  index.ts
web/src/lib/wasm/: dropletEngine.ts  droplet_engine.d.ts  droplet_engine.js  droplet_engine_bg.wasm  droplet_engine_bg.wasm.d.ts  package.json
web/src/lib/world/: index.ts  terrain.ts
web/src/routes/: +page.svelte
web/src/routes/topology/: +page.svelte
