[package]
name = "droplet-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "img2scene"
path = "src/bin/img2scene.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.25"
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "download-binaries"] }
ndarray = "0.16"
